src/features/Municipalities/ui/MunicipalitiesTable.module.scss
.tableWrapper {
    // sidebar width - gap between sidebar and page
    width: calc(100vw - var(--sidebar-width) - 2rem);
    overflow-x: scroll;
    overflow-y: scroll;
    height: 75vh;
}
.currency {
    display: inline-block;
    margin-left: 4px;
    vertical-align: middle;
}
.CompaniesTable {
    width: max-content;
    border-collapse: collapse;
}
.flexRender {
    display: inline-flex;
}
.headerTitle {
    text-align: left;
    color: var(--quatinary-color);
    font: var(--font-s);
    font-weight: 500;
}

.headerTitle,
.bodyValue {
    padding: 0.6rem 1.5rem 0.6rem 0.5rem;
}

.bodyValue {
    font: var(--font-s);
    white-space: nowrap;
}

.header {
    border-top: 1px solid var(--stroke-color);
    border-bottom: 1px solid var(--stroke-color);
}

.row {
    border-bottom: 1px solid var(--stroke-color);
}

.marked {
    background-color: var(--marked-row-bg-color);
}

.noData {
    width: 100%;
    height: 60vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

